hydroflow/tests/compile-fail/surface_port_unused_both_parens.rs
use hydroflow::hydroflow_syntax;

fn main() {
    let mut df = hydroflow_syntax! {
        src = [0](source_iter(0..10));
        dst = (for_each(drop))[0];
        src -> dst;
    };
    df.run_available();
}
